// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Heading> that renders a heading should add classes when props are changed 1`] = `
<div>
  <h3
    class="Heading Heading--align_right Heading--level_h3"
  >
    Some heading text
  </h3>
</div>
`;

exports[`<Heading> that renders a heading should render default heading correctly 1`] = `
<div>
  <h1
    class="Heading Heading--level_h1"
  >
    Some heading text
  </h1>
</div>
`;
